Fix T56898: misaligned icons in buttons in popovers.